--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
 anyio==3.6.2
-beautifulsoup4==4.12.2
+branca==0.6.0
 certifi==2023.5.7
 charset-normalizer==3.1.0
 click==8.1.3
+daftlistings==2.0.3
 fastapi==0.95.1
+folium==0.14.0
 greenlet==2.0.2
 h11==0.14.0
 idna==3.4
+Jinja2==3.1.2
+MarkupSafe==2.1.2
+numpy==1.24.3
 pydantic==1.10.7
 requests==2.30.0
 sniffio==1.3.0
