--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,51 @@
 anyio==3.6.2
+asttokens==2.2.1
+backcall==0.2.0
 branca==0.6.0
 certifi==2023.5.7
 charset-normalizer==3.1.0
 click==8.1.3
+comm==0.1.3
 daftlistings==2.0.3
+debugpy==1.6.7
+decorator==5.1.1
+executing==1.2.0
 fastapi==0.95.1
 folium==0.14.0
 greenlet==2.0.2
 h11==0.14.0
 idna==3.4
+ipython==8.13.2
+jedi==0.18.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
+matplotlib-inline==0.1.6
+nest-asyncio==1.5.6
 numpy==1.24.3
+packaging==23.1
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+platformdirs==3.5.0
+prompt-toolkit==3.0.38
+psutil==5.9.5
+ptyprocess==0.7.0
+pure-eval==0.2.2
 pydantic==1.10.7
+Pygments==2.15.1
+pyTelegramBotAPI==4.11.0
+python-dateutil==2.8.2
+pyzmq==25.0.2
 requests==2.30.0
+six==1.16.0
 sniffio==1.3.0
 soupsieve==2.4.1
 SQLAlchemy==2.0.12
+stack-data==0.6.2
 starlette==0.26.1
+tornado==6.3.1
+traitlets==5.9.0
 typing_extensions==4.5.0
 urllib3==2.0.2
 uvicorn==0.22.0
+wcwidth==0.2.6
