[add] updated daftlistings python package as git module

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 anyio==3.6.2
+APScheduler==3.10.1
 asttokens==2.2.1
 backcall==0.2.0
 branca==0.6.0
@@ -35,6 +36,8 @@ pydantic==1.10.7
 Pygments==2.15.1
 pyTelegramBotAPI==4.11.0
 python-dateutil==2.8.2
+pytz==2023.3
+pytz-deprecation-shim==0.1.0.post0
 pyzmq==25.0.2
 requests==2.30.0
 six==1.16.0
@@ -46,6 +49,8 @@ starlette==0.26.1
 tornado==6.3.1
 traitlets==5.9.0
 typing_extensions==4.5.0
+tzdata==2023.3
+tzlocal==4.3
 urllib3==2.0.2
 uvicorn==0.22.0
 wcwidth==0.2.6
